--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-calendar": "^4.4.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
+    "timeago.js": "^4.0.2",
     "typescript": "5.1.6"
   }
 }
