--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-calendar": "^4.4.0",
     "react-dom": "18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
