--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -24,6 +27,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
+    "sanity": "^3.14.3",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "timeago.js": "^4.0.2",
